# Interacting-Fermions

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST.in  README.md  __init__.py  constructors.py  exceptions.py  floquetevolution.py  half.py  joblist.yml  push  push-to-nodes  quantities.py  run.py  setup.py  state_generators.py  submit-jobs  time_dependent.py
half/: __init__.py  block.py  misc.py
hamiltonians/: __init__.py  triangular_lattice.py  triangular_lattice_model.py
hamiltonians/aubry_andre_quasi_periodic/: __init__.py  block_diagonalized.py  block_diagonalized_obc.py  nleg.py  nleg_block_diagonalized.py  one_leg_block_diagonalized.py
models/: __init__.py  triangular_lattice.py  triangular_lattice_ext.h
quantities/: __init__.py  adjgap_ratio.py  entropy.py
rust/triangular_lattice_ext/: Cargo.toml  build.rs  cbindgen.toml  rustfmt.toml
rust/triangular_lattice_ext/src/: blochfunc.rs  buildtype.rs  common.rs  consv.rs  consv_k.rs  consv_k_s.rs  lib.rs  ops.rs  sitevector.rs  tests.rs
scripts/: plot.py  run.py  test.py  timedep.py  translation.py
spinsys/: __init__.py  constructors.py  dmrg.py  exceptions.py  half.py  quantities.py  state_generators.py  time_dependent.py
tests/: __init__.py  test_aubry_andre_quasi_periodic_nleg_block_diagonalized.py  test_constructors.py  test_quasi_heisenberg_nleg_H.py  test_quasi_heisenberg_nleg_blkdiag_H_1Dcrossexamine.py  test_quasi_heisenberg_nleg_blkdiag_H_2Dcrossexamine.py  test_quasi_heisenberg_nleg_blkdiag_H_2Dself_consistency.py
utils/: __init__.py  cache.py  globalvar.py  io.py  log.py  misc.py  timer.py
(+33 files in other folders)
