[package]
name = "triangular_lattice_ext"
version = "0.1.0"
authors = ["Mac Lee <macthecadillac@gmail.com>"]
build = "build.rs"

[lib]
name = "triangular_lattice_ext"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cbindgen = { git = "https://github.com/eqrion/cbindgen.git", branch = "master" }

[dependencies]
libc = "0.2"
num-complex = "0.1"
num-bigint = "0.1"
num-traits = "0.1"
fnv = "1.0"

[profile.release]
# debug = true
opt-level = 3
codegen-units = 1
